name:                stateful-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stateful-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stateful-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , exceptions
  other-modules:       Parser
                       Visitor
