name:                visitor-rpn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GoPavel/visitor-rpn
license:             BSD3
license-file:        LICENSE
author:              Golovin Pavel
maintainer:          GoPavel
copyright:           2020 Author name here
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stateful-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , exceptions
  other-modules:       Parser
                       Visitor
